# inbox-catalog

./: .gitignore  CLAUDE.md  GETTING-STARTED.md  PUBLISHING.md  README.md  SKILL.md  pyproject.toml  pyrightconfig.json  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
amazon-tracker/: README.md  SKILL.md
amazon-tracker/docs/: connect-gmail.md
amazon-tracker/references/: life-zone-routing.md
docs/: connect-gmail.md  inbox-as-a-dataset.md
inboxcatalog/: __init__.py  auth.py  cli.py  config.py  db.py  embed.py  gmail_client.py  google_auth.py  images.py  imap_client.py  ingest.py  llm.py  logutil.py  lookup.py  parse.py  profile.py  returns.py  sources.py  templates.py
inboxcatalog/profiles/: __init__.py  amazon.py  demo.py  life_zones.py
inboxcatalog/profiles/fixtures/: 02-meeplemarket-shipment.eml  03-boardgamebazaar-order.eml  04-noise-flashsale.eml  05-tabletoptrove-sleeves.eml  06-infra-receipt.eml
inboxcatalog/profiles/fixtures_amazon/: 01-order-crafting.eml  02-shipped-crafting.eml  03-delivered-crafting.eml  04-order-fandom.eml  05-return-window-fandom.eml  06-order-gift.eml  07-order-high-spend.eml  08-order-resale-lot.eml  09-order-unrouted.eml  10-order-expired-fitness.eml  11-noise-deals.eml
references/: writing-a-profile.md
scripts/: build_skills.sh
skills/extract-purchase-items/: SKILL.md  test_examples.py
skills/extract-purchase-items/examples/: 01-single-item-order.eml  01-single-item-order.expected.json  02-multi-item-shipment.eml  02-multi-item-shipment.expected.json  03-recommendation-carousel.eml  03-recommendation-carousel.expected.json  05-multi-quantity-order.eml  05-multi-quantity-order.expected.json  06-line-total-per-unit.eml  06-line-total-per-unit.expected.json  README.md
tests/: skill-scenarios.md  test_amazon.py  test_cli.py  test_cli_encoding.py  test_config.py  test_gmail_offline.py  test_images.py  test_mbox.py  test_quantity.py  test_zones.py
